--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 .config/tiling-assistant/tiledSessionRestore.json
 .config/ubuntu-xdg-terminals.list
 .config/xdg-terminals.list
+.docker/
 .gnupg/
 .lesshst
 .local/
